Initialize the code and release the v1 version of the SDK

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ bin/
 
 # Virtual machine crash logs
 hs_err_pid*
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# Gradle wrapper
+!gradle-wrapper.jar
